--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.chat.options.model=gpt-4.1
+spring.ai.openai.embedding.options.model=text-embedding-3-small
+
 main.datasource.url=jdbc:hsqldb:file:.jmix/hsqldb/jmixaibackend
 main.datasource.username=sa
 main.datasource.password=
