--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,21 @@
+docs.base-url=https://docs.jmix.io/jmix/
+docs.initial-page=intro.html
+
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4.1
 spring.ai.openai.embedding.options.model=text-embedding-3-small
 
-main.datasource.url=jdbc:hsqldb:file:.jmix/hsqldb/jmixaibackend
-main.datasource.username=sa
-main.datasource.password=
+main.datasource.url=jdbc:postgresql://localhost/jmix-ai-backend
+main.datasource.username=root
+main.datasource.password=root
 
 main.liquibase.change-log=io/jmix/ai/backend/liquibase/changelog.xml
+
+jmix.core.additional-stores=pgvector
+
+pgvector.datasource.url=jdbc:postgresql://localhost:5433/postgres
+pgvector.datasource.username=postgres
+pgvector.datasource.password=postgres
 
 jmix.ui.login-view-id=LoginView
 jmix.ui.main-view-id=MainView
@@ -37,3 +46,5 @@ logging.level.io.jmix=info
 
 # 'debug' or 'trace' levels help to troubleshoot security problems
 logging.level.org.springframework.security=info
+
+logging.level.io.jmix.ai.backend=debug
