Vector store updates with granular task handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 docs.base-url=https://docs.jmix.io/jmix/
 docs.initial-page=intro.html
+docs.limit-pages=5
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4.1
