--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-docs.base-url=https://docs.jmix.io/jmix/
+server.port=8081
+
+docs.base-url=https://docs.jmix.io/jmix
 docs.initial-page=intro.html
 docs.limit-pages=5
+
+uisamples.base-url=http://localhost:8080/ui-samples
+uisamples.doc-path=doc
+uisamples.sample-path=sample
+uisamples.limit-samples=5
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4.1
