--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ uisamples.doc-path=doc
 uisamples.sample-path=sample
 uisamples.limit-samples=5
 
+trainings.git-url=https://git.haulmont.com/platform/trainings/jmix-flowui-trainings.git
+trainings.limit=5
+trainings.whitelist=01 Basic courses,02 Advanced courses,03 Additional courses
+
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4.1
 spring.ai.openai.embedding.options.model=text-embedding-3-small
