--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ server.port=8081
 
 docs.base-url=https://docs.jmix.io/jmix
 docs.initial-page=intro.html
-docs.limit-pages=5
+docs.limit=5
 
 uisamples.base-url=http://localhost:8080/ui-samples
 uisamples.doc-path=doc
 uisamples.sample-path=sample
-uisamples.limit-samples=5
+uisamples.limit=5
 
 trainings.git-url=https://git.haulmont.com/platform/trainings/jmix-flowui-trainings.git
 trainings.limit=5
