--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation "org.springframework.ai:spring-ai-starter-model-openai:$springAiVersion"
     implementation "org.springframework.ai:spring-ai-pgvector-store:$springAiVersion"
     implementation "org.springframework.ai:spring-ai-advisors-vector-store:$springAiVersion"
+    implementation "org.springframework.ai:spring-ai-rag:$springAiVersion"
 
     implementation 'org.commonmark:commonmark:0.24.0'
     implementation 'org.jsoup:jsoup:1.17.2'
