--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 docs.base-url=https://docs.jmix.io/jmix
 docs.initial-page=intro.html
-docs.limit=5
+docs.limit=0
 
 uisamples.base-url=http://localhost:8080/ui-samples
 uisamples.doc-path=doc
@@ -12,6 +12,7 @@ uisamples.limit=0
 trainings.git-url=https://git.haulmont.com/platform/trainings/jmix-flowui-trainings.git
 trainings.limit=0
 trainings.whitelist=01 Basic courses,02 Advanced courses,03 Additional courses
+trainings.blacklist=jmix-introduction_EN.adoc
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4.1
