--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,19 +3,36 @@ server.port=8081
 docs.base-url=https://docs.jmix.io/jmix
 docs.initial-page=intro.html
 docs.limit=0
+docs.tool.description=Searches and returns information from Jmix documentation. Also provides general code snippets. \
+  Feel free to use this tool often. You should always use this tool at least once to correct the answer before giving the final answer.
+docs.tool.similarity-threshold=0
+docs.tool.top-k=3
 
-uisamples.base-url=http://localhost:8080/ui-samples
+uisamples.base-url=https://demo.jmix.io/ui-samples
 uisamples.doc-path=doc
 uisamples.sample-path=sample
 uisamples.limit=0
+uisamples.tool.description=Searches and returns information about ui components in Jmix like Button, ComboBox, DataGrid, etc. \
+  Also provides XML and Java code snippets. Feel free to use this tool often. \
+  When using this tool, write a request for a specific ui element name. \
+  You should always use this tool at least once to correct the answer before giving the final answer.
+uisamples.tool.similarity-threshold=0
+uisamples.tool.top-k=3
 
 trainings.git-url=https://git.haulmont.com/platform/trainings/jmix-flowui-trainings.git
 trainings.limit=0
 trainings.whitelist=01 Basic courses,02 Advanced courses,03 Additional courses
 trainings.blacklist=jmix-introduction_EN.adoc
+trainings.tool.description=Contains basic information on Jmix with up-to-date code examples. \
+  Contains a lot of information about basic work with Jmix. \
+  More specific information is often written here than in the documentation. \
+  Use this tool at most once as a last resort, only if you couldn't find relevant information using other tools.
+trainings.tool.similarity-threshold=0
+trainings.tool.top-k=2
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-4.1
+spring.ai.openai.chat.options.temperature=1
 spring.ai.openai.embedding.options.model=text-embedding-3-small
 
 main.datasource.url=jdbc:postgresql://localhost/jmix-ai-backend
