Flexible parameters in YAML

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ trainings.tool.similarity-threshold=0
 trainings.tool.top-k=2
 
 spring.ai.openai.api-key=${OPENAI_API_KEY}
-spring.ai.openai.chat.options.model=gpt-4.1
+spring.ai.openai.chat.options.model=gpt-4.1-mini
 spring.ai.openai.chat.options.temperature=1
 spring.ai.openai.embedding.options.model=text-embedding-3-small
 
